<resources>
    <string name="app_name">Ingenio</string>
    <string name="app_company">Ingenio, Inc.</string>
    <string name="email_example">example@company.com</string>
    <string name="signup">Registrate</string>
    <string name="login">Iniciar sesión</string>
    <string name="logo">logo</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="carreras">
        <item>Ing. Informatica</item>
        <item>Ing. Industrial</item>
        <item>Ing. Quimica</item>
        <item>Ing. Electrica y Electronica</item>
        <item>Ing. Mecatronica</item>
        <item>Ing. Civil</item>

    </string-array>
    <string-array name="carrerasMod">
        <item>Ing.Informatica</item>
        <item>Ing.Industrial</item>
        <item>Ing.Quimica</item>
        <item>Ing.ElectricayElectronica</item>
        <item>Ing.Mecatronica</item>
        <item>Ing.Civil</item>

    </string-array>
    <string-array name="URL_Imagenes">
        <item>https://firebasestorage.googleapis.com/v0/b/ingenio-dcf81.appspot.com/o/PresentAct%2Fing_informatica.png?alt=media&amp;token=07abfc09-47e6-4317-9d30-933bca8688d4</item>
        <item>https://firebasestorage.googleapis.com/v0/b/ingenio-dcf81.appspot.com/o/PresentAct%2Fing_industrial.png?alt=media&amp;token=fa938d56-4a84-4e17-b14c-7c60bbe40c08</item>
        <item>https://firebasestorage.googleapis.com/v0/b/ingenio-dcf81.appspot.com/o/PresentAct%2Fing_quimica.png?alt=media&amp;token=420a3a7b-e8b0-4d8c-937f-6a11d4dbf2ec</item>
        <item>https://firebasestorage.googleapis.com/v0/b/ingenio-dcf81.appspot.com/o/PresentAct%2Fing_elec_elect.png?alt=media&amp;token=58cd5a2f-cdcf-4f18-914c-eb0a6b38a746</item>
        <item>https://firebasestorage.googleapis.com/v0/b/ingenio-dcf81.appspot.com/o/PresentAct%2Fing_mecatronica.png?alt=media&amp;token=5e522e84-da1a-444e-a335-e14ff1e87a1f</item>
        <item>https://firebasestorage.googleapis.com/v0/b/ingenio-dcf81.appspot.com/o/PresentAct%2Fing_civil.png?alt=media&amp;token=9aedb1f5-3edb-4147-8876-c9b9a1fd22cf</item>
    </string-array>
    <string-array name="detalles">
        <item>Esta ingenieria tiene que ver con las computadoras, tecnologias moviles, web, inteligencia artificial, entre otras cosas</item>
        <item>Ingenieria dirigida a resolver problemas de administradores con casco</item>
        <item>Ingenieria dirigida a resolver problemas de administradores con casco</item>
        <item>Ingenieria dirigida a resolver problemas de administradores con casco</item>
        <item>Ingenieria dirigida a resolver problemas de administradores con casco</item>
        <item>Ingenieria dirigida a resolver problemas de administradores con casco</item>
    </string-array>
    <string-array name="Titulo.Informatica">
        <item>TeamViewer para Android</item>
        <item>ConnectBot</item>
        <item>Acode</item>
        <item>AndFTPAndFTP</item>
        <item>RemoDB</item>
        <item>Es File Explorer</item>
        <item>Network Analyzer</item>
        <item>WPS Office</item>
    </string-array>
    <string-array name="Ing.Informatica">
        <item>Posibilita la conexión a tu pc a través del escritorio remoto.</item>
        <item>Conexión por SSH a cualquier maquina remota y manejo por la línea de comandos.</item>
        <item>Editor de código para Android. Soporta diferentes lenguajes como PHP, HTML, Java, JavaScript, C++, C# y Ruby.</item>
        <item>Conectarte a tus servidores FTP, FTPS, SCP y SCP. Es práctico para acceder a tus archivos externos o subir desde tu móvil algún contenido que necesites en tu página web.</item>
        <item>Acceso a una base de datos desde el móvil. Permite conectarse a una base de datos MS SQL, MySQL, PostgreSQL o Sybase. </item>
        <item>Exploradores de archivos, usar conexiones por la red local FTP y bluetooth, con lo que podrás montar directorios de otra PC o Mac que tenga archivos compartidos en una LAN.</item>
        <item>Diagnosticar varios problemas en la configuración de su red wifi, conectividad a Internet y también detectar varios problemas en servidores remotos gracias a la amplia gama de herramientas que proporciona.</item>
        <item>Esta aplicación es fundamental para cualquiera que necesite trabajar con su smartphone o Tablet. Te permite ver o editar documentos Word, Excel, PDF &amp; PowerPoint.</item>
    </string-array>
    <string-array name="Ing.Informatica1">
        <item>https://www.teamviewer.com/es-mx/descarga/android/</item>
        <item>https://play.google.com/store/apps/details?id=org.connectbot&amp;hl=es&amp;gl=US&amp;pli=1</item>
        <item>https://play.google.com/store/apps/details?id=com.foxdebug.acodefree</item>
        <item>https://play.google.com/store/apps/details?id=lysesoft.andftp&amp;hl=es&amp;gl=US</item>
        <item>https://play.google.com/store/apps/details?id=com.kriskast.remotedb&amp;hl=es&amp;gl=US</item>
        <item>https://play.google.com/store/apps/details?id=com.foxdebug.acodefree</item>
        <item>https://play.google.com/store/apps/details?id=com.vrem.wifianalyzer&amp;hl=es&amp;gl=US</item>
        <item>https://play.google.com/store/apps/details?id=cn.wps.moffice_eng&amp;hl=es&amp;gl=US</item>
    </string-array>
    <string-array name="Titulo.Industrial">
        <item>Safesite</item>
        <item>Reforma Simples</item>
        <item>MyScript Calculator</item>
        <item>Co-Construct</item>
        <item>iCircuit</item>
        <item>Evernote</item>
        <item>AutoCAD 360</item>
        <item>Sun Seeker</item>
    </string-array>
    <string-array name="Ing.Industrial">
        <item>Permite identificar y corregir problemas para prevenir accidentes.</item>
        <item>Calcula la cantidad de material necesario y los valores estimados, a partir de una lista de precios actualizada por SINAPI.</item>
        <item>Dibujas los números sobre la pantalla del celular o de la tablet y la app transcribe la operación y la resuelve de inmediato.</item>
        <item>Establece la comunicación entre los integrantes del proyecto y los clientes y también ayuda en la gestión de tiempo, comparativo de precios y elaboración de presupuestos.</item>
        <item>iCircuit es un buen simulador y diseñador de circuitos y componentes.</item>
        <item>La app permite que hagas innumerables anotaciones, captures imágenes, guarde ideas, notas, lista de tareas y lo que consideres necesario. ¡Es una excelente herramienta para gestionar información!</item>
        <item>La visualización y la edición de los proyectos.</item>
        <item>Por medio de geoposicionamiento, de la brújula y de la cámara, muestra la posición del sol en cualquier momento, incluso estando dentro de la construcción.</item>
    </string-array>
    <string-array name="Ing.Industrial1">
        <item>https://play.google.com/store/apps/details?id=com.safesitecheckin.checkin&amp;hl=es_GT</item>
        <item>https://play.google.com/store/apps/details?id=com.matiasmx.architecture&amp;hl=es_GT</item>
        <item>https://play.google.com/store/apps/details?id=com.myscript.calculator&amp;hl=es_GT</item>
        <item>https://play.google.com/store/apps/details?id=com.co_construct.htmlapp&amp;hl=es_GT</item>
        <item>https://play.google.com/store/apps/details?id=com.kruegersystems.circuitdroid&amp;hl=es_GT</item>
        <item>https://play.google.com/store/apps/details?id=com.evernote&amp;hl=es_GT</item>
        <item>https://play.google.com/store/apps/details?id=com.autodesk.a360&amp;hl=es_GT</item>
        <item>https://play.google.com/store/apps/details?id=com.ajnaware.sunseeker&amp;hl=es_GT</item>
    </string-array>
    <string-array name="Titulo.Quimica">
        <item>GnumeriC</item>
        <item>Octave</item>
        <item>Freemat</item>
        <item>Scilab</item>
        <item>Uconeer</item>
        <item>DIA</item>
        <item>INKSCAPE</item>
        <item>COCO</item>
    </string-array>
    <string-array name="Ing.Quimica">
        <item>Planilla de cálculo en lugar de un paquete office completo, una alternativa es Gnumeric.</item>
        <item>Resuelven problemas numéricos como matlab.</item>
        <item>Otra alternativa al Matlab es el software FreeMat, que dispone de la mayoría de las funciones de Matlab.</item>
        <item>Es un software de código abierto para computación numérica.</item>
        <item>La aplicación más clásica para conversión de unidades es Uconeer. Es un programa pequeño (0.5 Mb) pero muy completo.</item>
        <item>Programa para diseñar diagramas, que incorpora una biblioteca específica de equipos de procesos químicos.</item>
        <item>Inkscape se utiliza para diseño vectorial. Para complementarlo, Emilio Tozzi ha desarrollado una librería de imágenes de procesos químicos para agregarle.</item>
        <item>Es un simulador secuencial gratuito, de estado estacionario.</item>
    </string-array>
    <string-array name="Ing.Quimica1">
        <item>projects.gnome.org/gnumeric/downloads.shtml</item>
        <item>https://sourceforge.net/projects/octave/</item>
        <item>http://freemat.sourceforge.net/</item>
        <item>www.scilab.org</item>
        <item>www.katmarsoftware.com/uconeer.htm#download</item>
        <item>www.dia-installer.de</item>
        <item>inkscape.org/download/</item>
        <item>www.cocosimulator.org/index_download.html</item>
    </string-array>
    <string-array name="Titulo.ElectricayElectronicca">
        <item>Electrical Formulator</item>
        <item>Metal Prices</item>
        <item>Electrical Calculations lite</item>
        <item>Two Thirty Volts</item>
        <item>Costes de Energía-Calc</item>
        <item>Ley de Ohm-Calc</item>
        <item>Caida de tensión-Calc</item>
        <item>EveryCircuit</item>
    </string-array>
    <string-array name="Ing.ElectricayElectronica">
        <item>Nos permite resolver cualquier problema de diseño eléctrico con cientos de conversiones y fórmulas de cálculo.</item>
        <item>Información sobre los precios del cobre y de aluminio, según el precio de cierre del London Metal Exchange y el German Electrolytic High-Conductivity Copper (DEL).</item>
        <item>La aplicación de cálculos eléctricos más completa, sencilla y fácil de usar.</item>
        <item>Tiene como objetivo reducir los riesgos de los accidentes eléctricos laborales y domésticos.</item>
        <item>Calcula por días, semanas, meses o año los costes de los equipos eléctricos o maquinaria.</item>
        <item>Calculos de voltaje, corriente, resistencia y potencia. Incluye fórmulas y unidades múltiples.</item>
        <item>Determina la caída de tensión para la selección del cable más adecuado.</item>
        <item>Construye cualquier circuito, toque el botón de reproducción y vea las animaciones dinámicas de voltaje, corriente y carga.</item>
    </string-array>
</resources>